# wolfssljni

./: .gitignore  CLAUDE.md  ChangeLog.md  LICENSING  Makefile  README  README.md  build.xml  java.sh  pom.xml  spotbugs-exclude.xml
.github/workflows/: address-sanitizer.yml  android_gradle.yml  android_gradle_fipsready.yml  check-file-lists.yml  comment-style-check.yml  fips-ready-dual-provider.yml  infer.yml  java-module-test.yml  jni-patched-ci.yml  line-length-check.yml  linux-32bit.yml  linux-common.yml  main.yml  maven.yml  scan-build.yml  spotbugs.yml  stable-wolfssl-releases.yml  undefined-sanitizer.yml  windows-vs.yml
IDE/Android/: .gitignore  README.md  build.gradle  gradle.properties
IDE/Android/app/: build.gradle
IDE/Android/app/src/main/cpp/: CMakeLists.txt  native
IDE/Android/gradle/wrapper/: gradle-wrapper.properties
IDE/WIN/: README.md  wolfssljni.props  wolfssljni.sln  wolfssljni.vcxproj  wolfssljni.vcxproj.filters
docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
docs/com/wolfssl/: WolfSSL.html  WolfSSLContext.html  WolfSSLDecryptVerifyCallback.html  WolfSSLEccSignCallback.html  WolfSSLEccVerifyCallback.html  WolfSSLException.html  WolfSSLGenCookieCallback.html  WolfSSLIORecvCallback.html  WolfSSLIOSendCallback.html  WolfSSLLoggingCallback.html  WolfSSLMacEncryptCallback.html  WolfSSLMissingCRLCallback.html  WolfSSLRsaDecCallback.html  WolfSSLRsaEncCallback.html  WolfSSLRsaSignCallback.html  WolfSSLRsaVerifyCallback.html  WolfSSLSession.html  WolfSSLVerifyCallback.html  package-frame.html  package-summary.html  package-tree.html
docs/com/wolfssl/wolfcrypt/: ECC.html  RSA.html  package-frame.html  package-summary.html  package-tree.html
examples/: Client.java  MyALPNSelectCallback.java  MyAtomicDecCtx.java  MyAtomicEncCtx.java  MyDecryptVerifyCallback.java  MyEccSharedSecretCallback.java  MyEccSharedSecretCtx.java  MyEccSignCallback.java  MyEccSignCtx.java  MyEccVerifyCallback.java  MyEccVerifyCtx.java  MyGenCookieCallback.java  MyGenCookieCtx.java  MyIOCtx.java  MyLoggingCallback.java  MyMacEncryptCallback.java  MyMissingCRLCallback.java  MyPskClientCallback.java  MyPskServerCallback.java  MyRecvCallback.java  MyRsaDecCallback.java  MyRsaDecCtx.java  MyRsaEncCallback.java  MyRsaEncCtx.java  MyRsaSignCallback.java  MyRsaSignCtx.java  MyRsaVerifyCallback.java  MyRsaVerifyCtx.java  MySendCallback.java  MyTls13SecretCallback.java  MyVerifyDecryptCallback.java  README.md  Server.java  SimpleThreadedClient.java  SimpleThreadedClient.sh  SimpleThreadedServer.java  SimpleThreadedServer.sh  VerifyCallback.java  WindowsConfig.bat  X509CertRequest.bat  (+7 more)
examples/certs/: ca-cert.pem  ca-ecc-cert.pem  ca-keyPkcs8.der  example-com.der  generate-san-test-certs.sh  update-certs.sh
examples/certs/san-test/: san-test-all-types-key.pem  san-test-all-types.der  san-test-all-types.pem  san-test-ca-cert.pem  san-test-ca-key.pem  san-test-dirname-rid-key.pem  san-test-dirname-rid.der  san-test-dirname-rid.pem  san-test-dns-ip-key.pem  san-test-dns-ip.der  san-test-dns-ip.pem  san-test-email-uri-key.pem  san-test-email-uri.der  san-test-email-uri.pem  san-test-othername-upn-key.pem  san-test-othername-upn.der  san-test-othername-upn.pem
examples/certs/test/: cert-ext-nc.pem  cert-ext-ncdns.pem  cert-ext-ncip.pem  crl-decode.der  crl-decode.pem  crl-dp-cert.pem
examples/provider/: ClientJSSE.java  ClientJSSE.sh  ClientSSLSocket.java  ClientSSLSocket.sh  DtlsClientEngine.java  DtlsClientEngine.sh  DtlsServerEngine.java  DtlsServerEngine.sh  DualProviderFIPSTest.java  DualProviderFIPSTest.sh  MultiThreadedSSLClient.java  MultiThreadedSSLClient.sh  MultiThreadedSSLServer.java  MultiThreadedSSLServer.sh  ProviderTest.bat  ProviderTest.java  ProviderTest.sh  PskClientEngine.java  PskClientEngine.sh  PskClientSocket.java  PskClientSocket.sh  PskServerEngine.java  PskServerEngine.sh  PskServerSocket.java  PskServerSocket.sh  README.md  SSLEngineClientDTLS13.java  SSLEngineClientDTLS13.sh  SSLEngineServerDTLS13.java  SSLEngineServerDTLS13.sh  ServerJSSE.java  ServerJSSE.sh  ThreadedSSLSocketClientServer.java  ThreadedSSLSocketClientServer.sh  all.jks  all_mixed.jks  ca-client.jks  ca-server.jks  cacerts.jks  client-ecc.jks  (+19 more)
examples/provider/rmi/: README.md  RmiClient.java  RmiClient.sh  RmiRemoteInterface.java  RmiServer.java  RmiServer.sh  RmiTLSClientSocketFactory.java  RmiTLSServerSocketFactory.java
native/: com_wolfssl_WolfCryptECC.c  com_wolfssl_WolfCryptECC.h  com_wolfssl_WolfCryptEccKey.c  com_wolfssl_WolfCryptEccKey.h  com_wolfssl_WolfCryptRSA.c  com_wolfssl_WolfCryptRSA.h  com_wolfssl_WolfSSL.c  com_wolfssl_WolfSSL.h  com_wolfssl_WolfSSLCRL.c  com_wolfssl_WolfSSLCRL.h  com_wolfssl_WolfSSLCertManager.c  com_wolfssl_WolfSSLCertManager.h  com_wolfssl_WolfSSLCertRequest.c  com_wolfssl_WolfSSLCertRequest.h  com_wolfssl_WolfSSLCertificate.c  com_wolfssl_WolfSSLCertificate.h  com_wolfssl_WolfSSLContext.c  com_wolfssl_WolfSSLContext.h  com_wolfssl_WolfSSLNameConstraints.c  com_wolfssl_WolfSSLNameConstraints.h  com_wolfssl_WolfSSLSession.c  com_wolfssl_WolfSSLSession.h  com_wolfssl_WolfSSLSessionInfo.c  com_wolfssl_WolfSSLSessionInfo.h  com_wolfssl_WolfSSLX509Name.c  com_wolfssl_WolfSSLX509Name.h  com_wolfssl_WolfSSLX509StoreCtx.c  com_wolfssl_WolfSSLX509StoreCtx.h  com_wolfssl_WolfSSL_TLS_VERSION.h  com_wolfssl_globals.h  com_wolfssl_wolfcrypt_ECC.c  com_wolfssl_wolfcrypt_ECC.h  com_wolfssl_wolfcrypt_EccKey.c  com_wolfssl_wolfcrypt_EccKey.h  com_wolfssl_wolfcrypt_RSA.c  com_wolfssl_wolfcrypt_RSA.h
platform/android_aosp/: README  jsse_install.sh
platform/android_aosp/wolfssl/: Android.mk  CleanSpec.mk
platform/android_aosp/wolfssljni/: Android.mk
rpm/: spec.in
scripts/: check-file-lists.sh  comment-style-check.sh  find-pr-info.sh  find-wolfssl-pr-patch-defines.sh  infer.sh  line-length-check-added-lines.sh
src/java9/: module-info.java
src/test/: server.jks
(+125 files in other folders)
